正在测试java安全管理器